// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalBox Test 1`] = `
<div
  aria-modal="true"
  className="pf-c-modal-box"
  role="dialog"
  titleId="titleId"
>
  This is a ModalBox
</div>
`;

exports[`ModalBox Test isLarge 1`] = `
<div
  aria-modal="true"
  className="pf-c-modal-box pf-m-lg"
  role="dialog"
  titleId="titleId"
>
  This is a ModalBox
</div>
`;

exports[`ModalBox Test isOpen 1`] = `
<div
  aria-modal="true"
  className="pf-c-modal-box pf-m-lg"
  isOpen={true}
  role="dialog"
  titleId="titleId"
>
  This is a ModalBox
</div>
`;
